--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <!-- Основная сетка с франшизами -->
       <h2><i class="fas fa-fire"></i> Рекомендации</h2>
       <div id="grid" class="grid"></div>
-      <!-- <p id="empty" class="empty">Загрузка...</p> -->
+      <p id="empty" class="empty"></p>
 
       <!-- Кнопка "Больше франшиз" -->
       <!-- <div style="text-align:center; margin:20px 0;">
